# ChangeLog for dev-lang/php
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.931 2015/02/23 15:57:25 klausman Exp $

  23 Feb 2015; Tobias Klausmann <klausman@gentoo.org> php-5.4.37.ebuild:
  Stable on alpha, bug 533998

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for ia64, wrt bug #533998

*php-5.4.38 (20 Feb 2015)
*php-5.5.22 (20 Feb 2015)
*php-5.6.6 (20 Feb 2015)

  20 Feb 2015; Ole Markus With <olemarkus@gentoo.org> +php-5.4.38.ebuild,
  +php-5.5.22.ebuild, +php-5.6.6.ebuild:
  Version bumps

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for ppc64, wrt bug #533998

  16 Feb 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for sparc, wrt bug #533998

  01 Feb 2015; Markus Meier <maekke@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  arm stable, bug #533998

  31 Jan 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for ppc, wrt bug #533998

  25 Jan 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for x86, wrt bug #533998

  25 Jan 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for amd64, wrt bug #533998

  25 Jan 2015; Jeroen Roovers <jer@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for HPPA (bug #533998).

*php-5.6.5 (23 Jan 2015)
*php-5.5.21 (23 Jan 2015)
*php-5.4.37 (23 Jan 2015)

  23 Jan 2015; Ole Markus With <olemarkus@gentoo.org> +php-5.4.37.ebuild,
  +php-5.5.21.ebuild, +php-5.6.5.ebuild:
  Version bump

  28 Dec 2014; Aaron W. Swenson <titanofold@gentoo.org> php-5.3.29.ebuild,
  php-5.4.36.ebuild, php-5.5.20.ebuild, php-5.6.4.ebuild:
  Rename virtual/postgresql to dev-db/postgresql

  26 Dec 2014; Ole Markus With <olemarkus@gentoo.org> -php-5.4.34.ebuild,