@@ -36,20 +36,20 @@ EBUILD php-5.4.36.ebuild 22377 SHA256 1ccdfcd41b96f68742f572d9c04eb6e9c595c259ef
 EBUILD php-5.4.37.ebuild 22393 SHA256 2ef8b57d25ee17d7d0b9c51befc4253261d674f6fe804562902fa04f64a0e4a1 SHA512 fdac0db1b0b059b0da424f5293a901b7f2101a9170bc29b0afa29068e8b74e964a35317025c01666a59fde442b6627767ea34e810f32954e3f5d46543602240a WHIRLPOOL 1cbcb32c28d9ee9ca0200070d39d3e073b0c5b744a9ffbe3bbb1ec580842d016a42e8682017270051987345f14c73a3f9dd1663c701f96de8dacf4bb4b171db9
 EBUILD php-5.4.38.ebuild 22402 SHA256 967dc5fcaaca9293706ce361baeb4b3601cf9bd453fb08eef619c50a7059fc51 SHA512 c27deb83cc29f6835097c573991480f5cd1c8667f149e62a65718db95f995bfe302d751a524cb1d6ab5efadadbd98e62240ea9efc972ac5e1ca029f590f9dcd8 WHIRLPOOL 5ea6c6541fc7be3f37128dde40d08ecfdb9eabaf09f62825a96345dd0617473d345d637ff2bb70cb6202556e9011b989cf99a4de7efafb19589e38b4de41be15
 EBUILD php-5.5.20.ebuild 22311 SHA256 010bb641a42700948bf146826e1c21284d0a0cf5fdd47453bdf18fecddb7239f SHA512 92ce6eced80ab9859f04b044dcf6533505cf5c1a933aef3c6d599d0f2d156fe94dd494e03b88a69910fa6bbc23bb78b420995a13971b3cf6813301538408c794 WHIRLPOOL 13aa02b7f6495103ee36cea2861bb4cb25d38e33e94a3b6af7a9994c3c84526556352015fe45913794f74f15c517c090901535ee53dd7a508c799e3849df5cab
-EBUILD php-5.5.21.ebuild 22322 SHA256 a4be16ba819754ab89c938fd1e4ec47fb37cf68bf6eb0f66a7f657964350da7d SHA512 0b2f699faf5513e08a2a3779d73306345c41d95f55e6d9d7e56040fef459410674c65dbbf4a7babc91d7484421790c12dd2e7d52ba0401b8d8471be2b5ad9979 WHIRLPOOL a90065daee0571fae3362db5ad14e248a36a3e6d76afb8a41598c2228dcccf5eacd7cca3b248d1685a91117357327604491d4dd46d4ae7645980e2e511a11b16
+EBUILD php-5.5.21.ebuild 22327 SHA256 7d689ea76263637e3341ae8ac9edb86e9a81cb333fef98dd913afee8212fc1f8 SHA512 0c63826c58bb6317494cc24c4b163573ba42c6f990183d2ab4de2fbc11031a1fe6afa3177a8f95218392e8bd6e75606bcdd7d52ea476661288202367b2bb3fcf WHIRLPOOL 6cbf7405e422cbcfa7d0098835e1d8475f4f6bd933978ccad041b4532f308267d039816eb4d324025c9e54f7f86297db82810ce8eb6d462b4b18a07a54847325
 EBUILD php-5.5.22.ebuild 22336 SHA256 b198bd844dae418ad155ccf062c46b17bbfbbba0107f12e07fd1b539ef013515 SHA512 e9ed77aa7826a57977c9bcf29bb9471eccb69be1420b5d9c4007b96a45951fc9f5ba6e71449851f3a39b10ba639e3d5efecf6242ecb186a4502f6e6bbf63ef41 WHIRLPOOL f85ba989f0309589cf4f9a248bf74caeaad76c63f275d4f1428bb7184d0bcdea9a37fd7159556bf706078f8afea4ab4a44ad6799789286840e3b81b753d24195
 EBUILD php-5.6.4.ebuild 22318 SHA256 27aa7ce3432dca3ab4f7f78081109858f370de55380c273c8418355bce899bd9 SHA512 393d7aa225d3e0579994c963a668f71d54030f603d867c1e9a54a9cb1ed175b9dee5ce3052e01e2513efaf6ad5b20111a84aaee7217186b2467224e8c1f434d4 WHIRLPOOL 95522df7cfa84cd58976e27f2a06087360a68125b10e17b6e1d79051af2a59fde34807d3eafe4f6675595f24d4070c983d27075139805d7e83ad436237eb202b
 EBUILD php-5.6.5.ebuild 22335 SHA256 3b7a2087362fbe9397e6ecd662460d6447199557f4ca619d87e6a5eec9906cfc SHA512 09b855e50694941c26b32426b1f9576b9654b25425109dabf67f9e9fa07b54149f43a9b95a39c8fd393990aeb86e0acf76230a5b1e25ac2610a077e4b18afb82 WHIRLPOOL 65a320335124a0dc48ca3d9dc8de36b052bf5b2af60e21ca058dd93cb0aaa9781f8e09b925788e7b081b9e11164e249c9b8dd33f5cd22054a874d49c69629cbb
 EBUILD php-5.6.6.ebuild 22335 SHA256 bee5e548360ef6ef8269a1cd5daab09f78959296d577ea5ddf77887a7d7adfff SHA512 2a3838206508a9dbbcb3f8aa9b4a1f9fc4e89cf013dae76f3e6ae118607edbd4464da7956d08a40db3da0bc635b23a731dea51594a620bf000d507d2a6489f49 WHIRLPOOL 531df0ed67c6e59bcfee6bc30c003e08997561239f9c89da569f935865009ea02ed46c1ec14092d7dd515b6693235f35966788c89dee01ef5244a39ae48f0fc8
-MISC ChangeLog 38256 SHA256 966b07580ff8d36b22892196cbdf9b1710a96a56f12636364d5df27e1053d8f9 SHA512 a79fe111e2893f7531fd5111fe09511b5a0e6fc76dce35a4fe32d79c6c02120a4ab8fce03bd62c74ed1606f2e2d31d1ac12d9bb338dfac0da87f20749179f940 WHIRLPOOL dc62ee178622d4aec261a71d60c0fba106785cdba18bc1d410e6c2075df1779d64bfab4954eff4bfc35aef6de903f71084dee1608143ad63f42d4b7313e992ab
+MISC ChangeLog 38360 SHA256 d58ea38fffe1d8f8760d6902c32713ca183f03cf16aedf8beebb62284491e509 SHA512 13bd602b94ec1f1b65255b39b1ff21fc43d6507fa390a07501e968e2d41af5e0e07f85b6ab34afef511d817d8d705e2535e43527a6f2ec566931d67e73b38f32 WHIRLPOOL 0ecda45080a17e9a1cf7b4634bc3bde3a632cc410d7b525cc0649892970e0e4e3541928b110f266063339e0210d0dce49980f68b903bfa689a7bc5fe51cc6c21
 MISC ChangeLog-2012 108488 SHA256 c2eea36502d34eadc7995d546f78aaa553ba07beeb51ea738715ad7f2e51b08d SHA512 eb25224993eff1ea42ea133302991a3ffad3adda0bc524cfa4fae49574230a8e65b35b08750d780c11cc9c152435fadbf2c416241fac28dcbb025e060e96cd7a WHIRLPOOL 82f627853fa961f3f3707fb2c8757acbc8fc644e89121d78703b40ff0f668aa7d0f1aa26c77f8f503e4f6da22ed865e4cb7c02d5d112c89488b12aa6b0d80568
 MISC metadata.xml 1601 SHA256 0f0d69832d7bf8ca13c940247d67e184d866ae48f4f77167b3b6a508f4c0ebfe SHA512 744b80efb645e7c6e632101c98cb7bcaf2a6530d948e5cb320050cfe4ca3733e29b995e2b1e4677b648c7a9e051a8056c6f38ae03ae18656a9583b24c32b6056 WHIRLPOOL 8ba9c5edf403759541ea1aad65138f48ddc4e4bef73c3a43744e1d0513031ab431fe1e742a39125257c3545ae0a091118d1b36d04a28bdf96e9989185764ae50
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iKYEAREIAGYFAlTrTe1fFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+iKYEAREIAGYFAlTrdc1fFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
 bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
-RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOjptgCdHmbe9Cj+MyF1tI9ib/8vTjIb
-08EAn3LBlgPJJpeibCuxlsSVwDUbEgLk
-=7NT3
+RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOhJDgCePi5uSNNhIgOXwzKsv4GqABfT
+ljYAn0x+/caNKtiypBWtv26qTOYz9sAJ
+=s9a1
 -----END PGP SIGNATURE-----
