@@ -2,29 +2,15 @@
 Hash: SHA256
 
 AUX facter-1.7.1-fix-proc-self-status.patch 1512 SHA256 0356f87b54afc8795b8042979e1278f74d5249ca0d4254eac051c0decd8b4032 SHA512 20c9eae6d868c9ea0886a27ed02a006bb3558d9ca47635da6882e9f9d6203e321b274d7addc01490c95165bb1e9ef06d0c6b34f67d445f35d1104bc58d5bcc69 WHIRLPOOL ac31579045f582e58e1fab2a9c846df8b2ddd85474174d6350afc6a29b4704f3e5b3c0b6e64b112053ff4505bb7094ecfdb7d0669ea843c1635d94a23b0eeda1
-DIST facter-1.7.6.gem 203776 SHA256 592ab025a91011b80a82cdc1a105a3b84e85d17c65154ee97478f02f745da45d SHA512 81ae55625a732e149699f79df0bf0c6d6b666b1eefa553af309dab8538d7c71651efd293f67ff1f8f732ac16d6025a9c64b22cd42081f8005c0afea4a0f84065 WHIRLPOOL 5a3ff8a56efa4bab2bbed6814050d7710dc1c7c0d962ff155a325b0614c27ed9fb761e80c3a3428925025bcef66299cc7a3f5a9a0f820319bf0e337a1025dec0
-DIST facter-2.2.0.gem 238592 SHA256 1003ebd3f368577a498d5cc8d2b402a4d0403b6a8c5349c561c468d1a9bf859e SHA512 4da0a60a70b7ccbc69027d85cb08338170086edc7dad3b91f1f2450ea77524114ebbc20a54e923aec5b0812b07368f7b0e3fbae2a0cb46fb166a338a2ef9f808 WHIRLPOOL 305ba16196f0bd49f8bb66162aff41a1325ec1feefb9ec244bf99a57e8bda0876faa11cecdca233c844c6d46e75925a7665e42366774b6c96a028b91f24d4368
 DIST facter-2.4.1.gem 236544 SHA256 4c8836066378d387c0561e4c3574865fa10d85d7474d472b049ecc7d5e4c67fa SHA512 5690f059961ba981d2e174f45ebdbb4e9b75aad3599cbc896f1c3d25f9b12c36500e09be70c36ebf27aed602c22d811604c344c7ccc71ecb200d4aeb78f28a4b WHIRLPOOL 1b6b4079b0449c646e06e9fd868b1de29a61facdacea956b032fbbef94e8c4c85594f50021b3f78a3668c5a0f6d29c448bd97c34fdb8a215de2ee74b164af6fd
-EBUILD facter-1.7.6.ebuild 1224 SHA256 831b51969eaa89b46f7bc00dac057bf216560131cd5fd675cfd0b93aff111826 SHA512 d3558ed169f62b654db27f1a98bbff2078b6dfefb01ecf446c654d05851ef0470daf8f9e09e78e88cbc13e92ac8fbb9098800956b9fa5d1268ddb1956c9aeab6 WHIRLPOOL 97422d794337b840b1f1f2ad0fd1b660ab74285b7f18f0c0fa87f1f34aa090bfa3235dc57d2e6d7f919f93ec3a58f949813036eed7fc66997f002f59a3074e3b
-EBUILD facter-2.2.0.ebuild 1839 SHA256 8e1884f36f42bacbb1f9749047c9a2b6ded6246ce5d7bc650f343f258b62b2db SHA512 2367addd05b408a077506867abb829bb0923f58fda68c90ac4e44b947017cb84466810266c93c5953d933aaa1143832d43985177eb297a959ecedd21034d01c7 WHIRLPOOL 84fbb7cece4909181b9918530ba826163735c59bdf75c833347ca5f314a781f08ad867fed75fb4d31db6373d04353241eeb9ede77c5dcf189032b409f0d78e6f
 EBUILD facter-2.4.1-r1.ebuild 2024 SHA256 f37ed369296f224df670c458da18e30cbca4e52a5c7e0bcf5c92514b24c8d24a SHA512 26f8dbf4f0d68ac5efc16810e00fe9d966eb9aab2d41a3ac931352c765b2202d412b4a2679004ca5a7b102afafad9e4e6557908ae6a2519a4cafdf6236350c75 WHIRLPOOL 1dec4b7ff6a06a4cf5a508b621cf6b88b54b3262dc421e012d96e8be5abe3a011a0702745fdbfb4cac5ef00aa940b79b14777433cdce6e7fbbc8c469b1e329c3
 EBUILD facter-2.4.1.ebuild 2007 SHA256 7f12da8e2622df478b96fe039e216267fb137009acfb38cf2823bcc484a6c619 SHA512 62c762177540bf0cd0cb4b2da69769bd343615d0d11dcb7fb45416aec5a4a0f3caf6136835ad80fb6705c26e139aec926af2d7353c9ca930aeb8c233b15cf586 WHIRLPOOL 5c77bcdad4f71fe79fc700a90c3c9b80677a871298a2963f6b8db339ed0b46e371e710e3396b17c67fcc177ed3368009155c959cdfa4ffde492cb3cde5fc76f5
-MISC ChangeLog 17629 SHA256 37d3d836d26b403703783d4f70b5e7c2778247c0cf784daa579b7e93025b436b SHA512 c802af9da6036e933495dcb1d16c31f28a124ed4d74da58ca06a89a3770497707c8165d6f852b00f245ab815ef9db657127ac098c4045c1f50b7631d8f9c9a23 WHIRLPOOL c5eec89a70b7d9754ad41ff197c9f81ce6f4db5a73d71aa8388eee0b172fe1705061227e97ad6fe0258fba7502303d3b2cf70e432249329c3277ed318662941d
+MISC ChangeLog 17772 SHA256 d717c7c9695b5644e64d304ecf1ec5ec413ac506b35ce39b235bd70ab7524808 SHA512 a1bbbe3c0daa50a804bbdaf982720fea53dddbce584fa1a922e907096a7dae50d54cd0ed0d21ae878604b64a4486da1f7bdd0af32b23f4fc7a50d60b5465910e WHIRLPOOL 3d229b8081008d33d72f7d852bda5cf39b31513f8e90d60ef43197b46dbe44a1ba0b21ee4c029e47eb4fd15df40617c66266071aa732b8f1b46b4d5972a4e60d
 MISC metadata.xml 568 SHA256 42e1960b3fa66b2bdbc939c389c59eca3c00736b3f88e8aefa4ffb85fdab8685 SHA512 92bc2c3743019e44faea40dd4dba228cabd7945c98bd07e8c5465347928a37e9e12fff8d84db5480fecdc8d8e29f84a5765b0baebaab6b00d4a4246a6968dca5 WHIRLPOOL e00bdad66ad8a155d9f071c551ac093641fb7f51646d2e20ca0baf357ffd2e4cd86f1774764d143432f92f4a7296a7ddddd96e3205b4b5cfdb4babb58ab5109f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU6weyAAoJELp701BxlEWf7GkQALnrIO0rWl3h0RWjh0KJSKHa
-GhRTpz1Df2rrV/Nkt/U4+LKuG4UtnaONQ+Qd/qMpFmOjqFAP2NXNKoOYaj/74FCZ
-N4dEKljy7nWWrXccmvZ5P7K5kBlOy96S/4N+WEuOJqsGtOOAq1RwfkDpQpKT17Hg
-Q3mskFmWMZ7Ii0DHgoJuqQbPpbjNO825wKV5VUHpxG7J538aYxdBsvDXfn9JyEJX
-g7hNco77HBplAIGdbUJXUIEJLSTLiDntSQCKAySXt20P5qvHNNBuhNmi0QS2orBL
-TZYeVcDkXlo8Jnv6WphPvVzChc5/hNrSpQz+tLIlACQGlMwHuqBJdSDMUCo4tLTP
-CwXO7cI1Avy387TSYrqWp0qhoG72txiTJSCPGocxK/NE1lwo6vi9qz2SKcu26H0N
-HhzTfVjjg6D6yxGFmo7O4Wv1iuh7GnpqQ+IQUraTvsZn3GXkCrxD/dlCxg2cy7qW
-S/xA2m0YmCBWuPaPSaV0EFGK11PQheYPHIAFGMXGz7/DQP6gxfF0kIauiqxsSRNo
-6aEyRahHIXJhLNuxEmvx7KJ68ScGHPyBY1RwYrP5rMwfcXmyBeKHr+1dLkqHlom0
-IxJYW2lh5GAcZ1cod7o5rHUak7TYcgymLbFFZxKDV34JZ/cJ+01aArgcrFYN8ndq
-0w8U95fBrqKx8pUaOmDY
-=16v6
+iF4EAREIAAYFAlTrdzkACgkQiIP6VqMIqNfsVgEAllOUzk0ehf22mA6YfAUZLDg5
+0E3hkj/MfwtWOSch5O8A/0AhGIQ/YFKij/KP0f6fxBhcEfHhKHMuvKXDtGvKYT56
+=vXJZ
 -----END PGP SIGNATURE-----
