@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( sys-apps/net-tools sys-apps/lsb-release dmi? ( sys-apps/dmidecode ) pciutils? ( sys-apps/pciutils ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/mocha-0.10.5:0.10[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] >=dev-ruby/rspec-core-2.14.8-r2[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
-DESCRIPTION=A cross-platform Ruby library for retrieving facts from operating systems
-EAPI=5
-HOMEPAGE=http://www.puppetlabs.com/puppet/related-projects/facter/
-IUSE=+dmi +pciutils elibc_FreeBSD ruby_targets_ruby19 test test
-KEYWORDS=amd64 hppa ppc ppc64 sparc x86
-LICENSE=Apache-2.0
-RDEPEND=sys-apps/net-tools sys-apps/lsb-release dmi? ( sys-apps/dmidecode ) pciutils? ( sys-apps/pciutils ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 )
-SLOT=0
-SRC_URI=mirror://rubygems/facter-1.7.6.gem
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=1dc4eafb150e8cf3f22e3dbd3844ac05
