@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/facter
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facter/ChangeLog,v 1.128 2015/02/23 10:57:53 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facter/ChangeLog,v 1.129 2015/02/23 18:53:39 graaff Exp $
+
+  23 Feb 2015; Hans de Graaff <graaff@gentoo.org> -facter-1.7.6.ebuild,
+  -facter-2.2.0.ebuild:
+  Cleanup vulnerable versions, bug 540260.
 
   23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> facter-2.4.1.ebuild:
   Stable for x86, wrt bug #540260
