@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/php
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.931 2015/02/23 15:57:25 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.932 2015/02/23 18:46:53 klausman Exp $
+
+  23 Feb 2015; Tobias Klausmann <klausman@gentoo.org> php-5.5.21.ebuild:
+  Stable on alpha, bug 533998
 
   23 Feb 2015; Tobias Klausmann <klausman@gentoo.org> php-5.4.37.ebuild:
   Stable on alpha, bug 533998
